js/js.translator/testData/incremental/invalidation/jsCodeWithConstStringFromOtherModule/lib1/l1.7.kt
const val CONST_KEY = "KEY"
const val CONST_VALUE = 7
